--- a/rcproject/rcproject.csproj
+++ b/rcproject/rcproject.csproj
@@ -74,6 +74,9 @@
 	  <MauiXaml Update="View\Competitions.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\CreateCompetitions.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\Drivers.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
